# OpenShell

./: .env.example  .gitignore  .markdownlint-cli2.jsonc  .packit.yaml  AGENTS.md  CI.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.gateway  README-FORK.md  README.md  TESTING.md  THIRD-PARTY-NOTICES  dco-signatures.json  flake.nix  install-dev.sh  install-vm.sh  install.sh  mise.toml  openshell.spec  pyproject.toml  rust-toolchain.toml  snapcraft.yaml  spread.yaml
.cargo/: config.toml
.claude/agents/: principal-engineer-reviewer.md
.github/: CODEOWNERS  VOUCHED.td
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: branch-checks.yml  branch-docs.yml  branch-e2e.yml  branch-kubernetes-e2e.yml  ci-image.yml  deb-package.yml  docker-build.yml  docs-preview-pr.yml  driver-vm-linux.yml  driver-vm-macos.yml  e2e-gate-check.yml  e2e-gate.yml  e2e-gpu-test.yaml  e2e-kubernetes-test.yml  e2e-label-dispatch.yml  e2e-label-help.yml  e2e-test.yml  helm-lint.yml  issue-triage.yml  release-auto-tag.yml  release-canary.yml  release-dev.yml  release-gateway.yml  release-tag.yml  release-vm-dev.yml  release-vm-kernel.yml  required-ci-gates.yml  rpm-package.yml  rust-cache-seed.yml  rust-lint.yml  rust-native-build.yml  shadow-branch-checks.yml  shadow-branch-e2e.yml  shadow-ci-image.yml  shadow-docker-build.yml  shadow-e2e-test.yml  shadow-rust-native-build.yml  shadow-shared-cpu-spike.yml  smoke-self-hosted-kyma.yml  snap-package.yml  (+3 more)
architecture/: README.md  build-containers.md  build.md  ci-e2e.md  compute-runtimes.md  custom-vm-runtime.md  gateway-security.md  gateway-settings.md  gateway-single-node.md  gateway.md  inference-routing.md  object-metadata.md  podman-driver.md  podman-rootless-networking.md  sandbox-connect.md  sandbox-custom-containers.md  sandbox-providers.md  sandbox.md  security-policy.md  system-architecture.md  tui.md
crates/openshell-bootstrap/: Cargo.toml
crates/openshell-cli/: Cargo.toml
crates/openshell-core/: Cargo.toml  README.md  build.rs
crates/openshell-driver-docker/: Cargo.toml  README.md
crates/openshell-driver-kubernetes/: Cargo.toml  README.md
crates/openshell-driver-podman/: Cargo.toml  NETWORKING.md  README.md
crates/openshell-driver-vm/: Cargo.toml  README.md  build.rs  start.sh
crates/openshell-driver-vm/runtime/: README.md  pins.env
crates/openshell-driver-vm/runtime/kernel/: openshell.kconfig
crates/openshell-driver-vm/scripts/: openshell-vm-sandbox-init.sh
crates/openshell-driver-vm/src/: driver.rs  ffi.rs  gpu.rs  lib.rs  main.rs  nft_ruleset.rs  procguard.rs  rootfs.rs  runtime.rs
crates/openshell-policy/: Cargo.toml
crates/openshell-prover/: README.md
crates/openshell-providers/: Cargo.toml  README.md
crates/openshell-router/: README.md
crates/openshell-sdk-node/: .gitignore  Cargo.toml  build.rs  index.d.ts  index.js  lib.d.ts  lib.mjs  package.json
crates/openshell-sdk-node/src/: lib.rs
crates/openshell-sdk-node/test/: smoke.mjs
docs/: .markdownlint-cli2.jsonc  CONTRIBUTING.md  CONTRIBUTING.mdx  conf.py  index.md  index.mdx  index.yml
e2e/: with-docker-gateway.sh  with-kube-gateway.sh  with-podman-gateway.sh
e2e/rust/: Cargo.toml  e2e-docker.sh  e2e-kubernetes.sh  e2e-openshift.sh  e2e-podman-rootless.sh  e2e-podman.sh  e2e-vm.sh
e2e/rust/src/harness/: cli.rs  mod.rs  sandbox.rs
e2e/rust/tests/: bypass_detection.rs  cf_auth_smoke.rs  cli_smoke.rs  community_image.rs  custom_image.rs  docker_preflight.rs  edge_tunnel_e2e.rs  forward_proxy_graphql_l7.rs  forward_proxy_l7_bypass.rs  gateway_resume.rs  gpu_device_selection.rs  host_gateway_alias.rs  local_driver_token_restart.rs  no_proxy.rs  podman_gateway_resume.rs  port_forward.rs  provider_auto_create.rs  readyz_health.rs  sandbox_labels.rs  smoke.rs  sync.rs  upload_create.rs  user_namespaces.rs  vm_gateway_resume.rs  websocket_conformance.rs
examples/: gateway-deploy-connect.md  sync-files.md  vscode-remote-sandbox.md
fern/: docs.yml  fern.config.json  main.css
proto/: compute_driver.proto  datamodel.proto  inference.proto  openshell.proto  sandbox.proto
providers/: aws-bedrock.yaml  claude-code.yaml  codex.yaml  copilot.yaml  cursor.yaml  github.yaml  nvidia.yaml  pypi.yaml
rfc/: 0001-agent-driven-policy-management.md  README.md
scripts/: baseline_workflow_metrics.py  docker-cleanup.sh  smoke-test-network-policy.sh  update_license_headers.py
tasks/: ci.toml  docker.toml  gateway.toml  helm.toml  keycloak.toml  package.toml  publish.toml  python.toml  sandbox.toml  test.toml  vm.toml
(+516 files in other folders)
