# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

# Standalone crate — the empty [workspace] table prevents Cargo from
# treating this as part of the root workspace, avoiding Dockerfile
# and Cargo.lock coupling.
[workspace]

[package]
name = "openshell-e2e"
description = "End-to-end tests for the OpenShell CLI"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
publish = false

[features]
e2e = []
e2e-docker = ["e2e"]
e2e-gpu = ["e2e"]
e2e-docker-gpu = ["e2e-docker", "e2e-gpu"]
e2e-kubernetes = ["e2e"]
e2e-podman = ["e2e"]
e2e-podman-gpu = ["e2e-podman", "e2e-gpu"]

[[test]]
name = "custom_image"
path = "tests/custom_image.rs"
required-features = ["e2e-docker"]

[[test]]
name = "docker_preflight"
path = "tests/docker_preflight.rs"
required-features = ["e2e-docker"]

[[test]]
name = "gateway_resume"
path = "tests/gateway_resume.rs"
required-features = ["e2e-docker"]

[[test]]
name = "user_namespaces"
path = "tests/user_namespaces.rs"
required-features = ["e2e-kubernetes"]

[[test]]
name = "gpu_device_selection"
path = "tests/gpu_device_selection.rs"
required-features = ["e2e-gpu"]

[dependencies]
tokio = { version = "1.43", features = ["full"] }
tempfile = "3"
sha2 = "0.10"
hex = "0.4"
rand = "0.9"
serde_json = "1"

[lints.rust]
unsafe_code = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
